Reconfigure executor to support virtual threads. Set virtual thread enable flag to false by default.